--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
  
 [project]
-name = "replasvegas"
+name = "rep-grafos"
 version = "0.0.1"
 description = "Representação de grafos Las Vegas"
 readme = "README.md"
